--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-librosa==0.10.2.post1
-numpy==2.2.2
-scikit_learn==1.6.1
-scipy==1.15.1
-torch==2.7.0.dev20250116+cu126
-umap_learn==0.5.7
+librosa==0.10.0
+numpy==1.23.1
+scipy==1.10.0
+scikit-learn==1.2.0
+tensorflow==2.11.0
